Add better logging

--- a/content/testing-a-blog-post/index.mdx
+++ b/content/testing-a-blog-post/index.mdx
@@ -25,4 +25,4 @@ lacinia ultrices, nisl nunc aliquam nunc, eu consectetur nisl nisl vitae nunc.
 Donec euismod nisl eget diam ultricies, eget ultricies nisl ultricies. Donec
 ullamcorper, nisl eu lacinia ultrices, nisl nunc aliquam nunc, eu consectetur
 nisl nisl vitae nunc. Donec euismod nisl eget diam ultricies, eget ultricies
-nisl ultricies. Adding another bit of text. Blah.
+nisl ultricies. Adding another bit of text. asdasd.
