Image formatting and other stuff

--- a/content/another-blog-post/index.mdx
+++ b/content/another-blog-post/index.mdx
@@ -6,12 +6,7 @@ description: This is another one
 categories:
   - Writing
   - Blog
-meta:
-  keywords:
-    - testing
-    - blog
-    - post
-imageUrl: banner.jpg
+imageUrl: ./banner.jpg
 imageAlt: Body of water in front of brown soil digital art
 imageCredit:
   Photo by [Casey
@@ -20,4 +15,4 @@ imageCredit:
 
 ## This is another blog post
 
-Just a short one this time
+Just a short one this time.
