Add landmark regions article

--- a/content/better-react-components-typescript-tricks/index.mdx
+++ b/content/better-react-components-typescript-tricks/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: build-better-react-components-with-these-typescript-tricks
-title: Build better React components with these TypeScript tricks
+title: Build Better React Components with these TypeScript Tricks
 date: 2024-05-13
 description:
   A component with a good API surface is explicit about how it should be used.
