--- a/content/making-motion-accessible/index.mdx
+++ b/content/making-motion-accessible/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: making-motion-accessible-prefers-reduced-motion
-title: "Making motion accessible: how to respect users' motion preferences"
+title: "Making Motion Accessible: How to Respect Users' Motion Preferences"
 date: 2024-04-26
 description:
   Motion is important, but it can be problematic for some users. Learn how to
