--- a/content/stop-lying-to-react-about-missing-dependencies/index.mdx
+++ b/content/stop-lying-to-react-about-missing-dependencies/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: stop-lying-to-react-about-missing-dependencies
-title: Stop lying to React about missing dependencies
+title: Stop Lying to React About Missing Dependencies
 date: 2021-02-20
 description:
   Deal with the 'React Hook useEffect has a missing dependency' warning once and
