--- a/content/storing-state-localstorage/index.mdx
+++ b/content/storing-state-localstorage/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: storing-state-localstorage-react
-title: Storing React state in localStorage - and how to write tests for it
+title: Storing React State in localStorage - and How to Write Tests For It
 date: 2021-01-19
 description:
   Create a custom hook to persist state between sessions, and add test coverage
