--- a/content/up-your-react-game-with-compound-components/index.mdx
+++ b/content/up-your-react-game-with-compound-components/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: up-your-react-game-with-compound-components
-title: Up your React game with compound components
+title: Up Your React Game with Compound Components
 date: 2021-04-20
 description: Build better, more robust components using this pattern.
 categories:
