--- a/content/view-transitions-api/index.mdx
+++ b/content/view-transitions-api/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: creating-cross-page-animations-view-transitions-api
-title: Create beautiful cross-page animations with the View Transitions API
+title: Create Beautiful Cross-Page Animations with the View Transitions API
 date: 2024-05-08
 description:
   In the past, creating cross-page animations was painful, but the View
